--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".activitys.Produccion_Activity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/list_datos_pedido"
-        android:layout_width="400dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_cancelar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
-
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
@@ -138,7 +126,6 @@
         android:id="@+id/produccion_btn_scrap"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo2"
         android:text="Scrap"
@@ -147,7 +134,7 @@
         app:icon="@drawable/ic_agregar"
         app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/produccion_cantidad_recycler"
-        app:layout_constraintStart_toEndOf="@+id/include" />
+        tools:layout_editor_absoluteX="416dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/produccion_cantidad_recycler"
@@ -179,7 +166,6 @@
         android:id="@+id/produccion_btn_cantidad"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/fondo2"
         android:text="Cantidad"
@@ -187,14 +173,13 @@
         android:textSize="14sp"
         app:icon="@drawable/ic_agregar"
         app:iconTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/include"
-        app:layout_constraintTop_toTopOf="@+id/produccion_cantidad_recycler" />
+        app:layout_constraintTop_toTopOf="@+id/produccion_cantidad_recycler"
+        tools:layout_editor_absoluteX="416dp" />
 
     <Button
         android:id="@+id/produccion_btn_bobina"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/fondo2"
@@ -204,8 +189,8 @@
         app:icon="@drawable/ic_agregar"
         app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/produccion_bobina_recycler"
-        app:layout_constraintStart_toEndOf="@+id/include"
-        app:layout_constraintTop_toTopOf="@+id/produccion_bobina_recycler" />
+        app:layout_constraintTop_toTopOf="@+id/produccion_bobina_recycler"
+        tools:layout_editor_absoluteX="416dp" />
 
     <Button
         android:id="@+id/produccion_btn_finalziar"
@@ -243,13 +228,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout4"
         app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
 
     <TextView
         android:id="@+id/textView25"
