--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -347,12 +347,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayotCargarDatos"
-        android:layout_width="400dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayoutVerificar"
         app:layout_constraintStart_toEndOf="@+id/linearLayoutDatos"
         app:layout_constraintTop_toBottomOf="@+id/textView7">
 
@@ -585,10 +585,10 @@
         android:id="@+id/textView16"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="100dp"
         android:background="#009688"
         android:padding="5dp"
-        android:text="Información"
+        android:text="Datos de la Tarea"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -601,7 +601,7 @@
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="100dp"
         android:background="#009688"
         android:padding="5dp"
         android:text="Cargar datos"
@@ -618,7 +618,7 @@
         android:id="@+id/textView17"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="100dp"
         android:background="#009688"
         android:padding="5dp"
         android:text="Verificación"
@@ -769,6 +769,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#4CAF50"
         android:text="Producción"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -783,6 +784,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#F44336"
         android:text="CANCELAR"
         android:textColor="@color/white"
         android:textSize="18sp"
