--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="#0C808E"
+        android:background="#30ADBC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +53,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="32dp"
+            android:backgroundTint="#4CAF50"
             android:text="Confirmar"
             app:icon="@android:drawable/ic_menu_save"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,6 +69,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
+            android:backgroundTint="#F44336"
             android:text="Cancelar"
             app:icon="@android:drawable/ic_menu_close_clear_cancel"
             app:layout_constraintBottom_toBottomOf="parent"
